============================
Changelog
============================
1/20/11 - 2/12/11
Features
-Added highlight-identifiers for FAQ links
-Index layout updated (menu & logo now at top, 'help' anchor moved to search box)
-Back button added to 'Help' page
-Pagination added to bottom of results in addition to top
-Updated all test files with relevant comments/info

Fixes
-Fixed broken validation of dates! (identified during last execution test)
-Fixed pagination overflow (identified during last execution test)
-Fixed erratic scrolling behavior (identified by Prof. Olsen)
-Search results table width reduced (identified by Prof. Olsen)
-Fixed BIG spacing errors in search results!

12/12/10 - 1/20/11
-unit tests added, all are now structured 
-integration tests added
-search results ui default behaviour modified
-cleaned up search start page, now table doesn't appear at start
-date+time sort feature fixed so they are now one entity
-validation schemes in place 
-tool tips implemented
-record cursor hover events added
-navigation ui updated, broken buttons/hovers fixed
-font rendering fixed
-major bug fixes in client and server

11/22/10 - 12/10/10
-sorting functionality completed 
-LOTS and LOTS of major bug fixes (server and client -side)
-update of pagination algorithm
-faq page up (controller and template)
-cross-browser stability fixes
-structural changes in templates  
-added fold "triangles" UI and logic

11/9/10 - 11/22/10
-search functionality COMPLETED!
-javascript ajax handling completed
-custom record filtering, sorting implementation finished
-optimized performance of search handling
-frontend overhaul
-pagination working now
-time/date conversion functions completed

10/29/10 - 11/9/10 
-added sqlalchemy models
-implemented crosschecking stub
-implemented RIS modules (checking, db)
-bridged web application and backend components
-added core risrecord and codepair classes
-completed ris record creation tool
-UI stability fixes